Updated File Tree sample for 3.0.0-alpha.6