@@ -1,13 +1,14 @@
 plugins {
     id 'java'
     id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.11'
 }
 
 ext {
     //legyver dependencies
-    legyverFenxlibVersion = '2.1.2.1'
+    legyverFenxlibVersion = '3.0.0-alpha.6'
     //apache dependencies
-    commonsLogVersion = '2.13.3'
+    commonsLogVersion = '2.17.1'
     commonsLangVersion = '3.11'
 }
 
@@ -20,8 +21,12 @@ repositories {
 }
 
 dependencies {
-    //about
+    //json config
+    implementation group: 'com.legyver', name: 'fenxlib.config.json', version: legyverFenxlibVersion
+    //file tree
     implementation group: 'com.legyver', name: 'fenxlib.widgets.filetree', version: legyverFenxlibVersion
+    //icons
+    implementation group: 'com.legyver', name: 'fenxlib.icons.standard', version: legyverFenxlibVersion
 
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: commonsLangVersion
     implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: commonsLogVersion
@@ -33,13 +38,7 @@ application {
     mainClass = 'com.legyver.fenxlib.samples.filetree.MyApplication'
 }
 
-run {
-    //workaround for https://github.com/sshahine/JFoenix/issues/955
-    jvmArgs = [
-            '--add-opens=java.base/java.lang.reflect=com.jfoenix'
-    ]
-}
-
-java {
-    modularity.inferModulePath = true
+javafx {
+    version = '17.0.2'
+    modules = ['javafx.controls', 'javafx.media', 'javafx.swing', 'javafx.web']
 }
